# curso-devops

./: .gitignore  Readme.md  hello.js  index.js  package.json  pyproject.toml  script.sh  test.js
.github/workflows/: pipeline.yaml
