[project]
name = "devops-pipilines"
version = "0.1.0"
description = "Teste padrão"
authors = [
    {name = "Paulo Carlos",email = "paulocarlosfilho@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
